[workspace]
members = [
    "bins/revme",
    "bins/revm-test",
    "crates/revm",
    "crates/primitives",
    "crates/interpreter",
    "crates/precompile",
]
resolver = "2"
default-members = ["crates/revm"]

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
debug = true

[profile.ethtests]
inherits = "test"
opt-level = 3

[patch.crates-io]
ff = { git = "https://github.com/scroll-tech/ff", branch = "feat/sp1" }

alloy-eips = { git = "https://github.com/scroll-tech/alloy.git", branch = "v0.3.0" }

alloy-eip2930 = { git = "https://github.com/scroll-tech/alloy-eips", branch = "v0.1.0" }
alloy-eip7702 = { git = "https://github.com/scroll-tech/alloy-eips", branch = "v0.1.0" }

alloy-primitives = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.0" }
alloy-sol-types = { git = "https://github.com/scroll-tech/alloy-core", branch = "v0.8.0" }
